[gd_scene load_steps=3 format=3 uid="uid://bxculeuw4yvq0"]

[ext_resource type="Script" uid="uid://d0tjd12npaidf" path="res://game.gd" id="1_70yv6"]
[ext_resource type="PackedScene" uid="uid://bv2o6nmsyp8wh" path="res://timed_btn.tscn" id="2_smx3j"]

[node name="GameManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_70yv6")
hyperspeed_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="---" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "- - - - - - - - - DIAGNOSTICS - - - - - - - - -"
horizontal_alignment = 1

[node name="EnergyCoreLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.901961, 0.968627, 1)
text = "Energy Core:  40/40"
horizontal_alignment = 1

[node name="CorruptionLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
text = "Memory Corruption:  100%"
horizontal_alignment = 1

[node name="---2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "- - - - - - - - - DIAGNOSTICS - - - - - - - - -"
horizontal_alignment = 1

[node name="---3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="TrashContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TrashLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/TrashContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Trash: 0"

[node name="PickupTrashBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/TrashContainer"]
layout_mode = 2
text = "Pick up"

[node name="SortBtn" parent="MarginContainer/ScrollContainer/VBoxContainer/TrashContainer" node_paths=PackedStringArray("game_manager") instance=ExtResource("2_smx3j")]
unique_name_in_owner = true
layout_mode = 2
text = "Sort"
game_manager = NodePath("../../../../..")
time = 3.0
costs = Dictionary[String, float]({
"trash": 1.0
})
gets_from_loot_table = "basic_trash"
loot_table_rolls = 5
can_run = true

[node name="ScrapMetalContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ScrapMetalLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ScrapMetalContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Metal scrap: 0oz"

[node name="PlasticContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="PlasticLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PlasticContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Plastic: 0oz"

[node name="WiresContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="WiresLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/WiresContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wires: 0oz"

[node name="OilContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="OilLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OilContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Oil: 0ml"

[node name="SmelterContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="SmelterLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SmelterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Smelters: 0"

[node name="ConstructSmelterBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/SmelterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Construct (30 Metal scrap)"

[node name="SmeltBtn" parent="MarginContainer/ScrollContainer/VBoxContainer/SmelterContainer" node_paths=PackedStringArray("game_manager") instance=ExtResource("2_smx3j")]
unique_name_in_owner = true
layout_mode = 2
text = "Smelt"
game_manager = NodePath("../../../../..")
amount = 0
changes = Dictionary[String, float]({
"metal_bars": 1.0
})
costs = Dictionary[String, float]({
"oil": 1.0,
"scrap_metal": 5.0
})

[node name="DisassemblerSpeedUpgradeContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="DisassemblerSpeedUpgradeBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/DisassemblerSpeedUpgradeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Disassembler Speed Upgrade 1 (20oz Metal bar)"

[node name="DisassemblerAmountUpgradeContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="DisassemblerAmountUpgradeBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/DisassemblerAmountUpgradeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Disassembler Amount Upgrade 1 (30oz Iron)"

[node name="SolarPanelContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="SolarPanelLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SolarPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Solar Panel: #"

[node name="ConstructSolarPanelBtn" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/SolarPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Construct (# Silicon)"

[node name="MetalBarsContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="MetalBarsLbl" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MetalBarsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Metal bars: 0"

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/TrashContainer/PickupTrashBtn" to="." method="_on_pickup_trash_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SmelterContainer/ConstructSmelterBtn" to="." method="_on_construct_smelter_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/DisassemblerSpeedUpgradeContainer/DisassemblerSpeedUpgradeBtn" to="." method="_on_disassembler_speed_upgrade_1_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/DisassemblerAmountUpgradeContainer/DisassemblerAmountUpgradeBtn" to="." method="_on_disassembler_amount_upgrade_1_btn_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SolarPanelContainer/ConstructSolarPanelBtn" to="." method="_on_construct_solar_panel_btn_pressed"]
